# ygpt-vk-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
bot/: main.py
bot/config/: base.py  context.py  logging.py  rate_limits.py  redis.py  settings.py  vk.py  yandex.py
bot/infrastructure/: __init__.py
bot/infrastructure/cache/: __init__.py  decorators.py  keys.py  redis.py
bot/lexicon/: __init__.py  english.py
bot/services/context/: base.py
bot/services/throttling/: processing.py  rate_limit.py
bot/services/yandexgpt/: __init__.py  exceptions.py  prompts.py  service.py
bot/vk/handlers/: __init__.py  commands.py  yagpt.py
bot/vk/middlewares/: noattachments.py  nobot.py  setup.py  throttling.py
